--- a/user-cleanup-tool.html
+++ b/user-cleanup-tool.html
@@ -43,6 +43,19 @@
             border-radius: 4px;
             border-left: 3px solid #4CAF50;
         }
+        #cleanup-btn {
+            background: #f44336;
+            font-weight: bold;
+            color: white;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        #cleanup-btn:hover {
+            background: #d32f2f;
+        }
     </style>
 </head>
 <body>
@@ -77,7 +90,7 @@
         </div>
     </div>
     
-    <button onclick="runCleanup()" style="background: #f44336; font-weight: bold;">🚨 Execute Database Cleanup</button>
+    <button id="cleanup-btn" onclick="runCleanup()">🚨 Execute Database Cleanup</button>
     
     <div id="output"></div>
 
